fix: resolve Docker container deployment issues and security vulnerabilities
- Fix Gunicorn temp file permissions by removing read-only filesystem restriction
- Update xlsx library to v0.20.3 with security hardening configuration
- Replace Flask development server with Gunicorn production WSGI server
- Remove sample files from git repository for customer data privacy
- Configure non-root user execution with proper UID/GID mapping
- Add security options to disable dangerous xlsx features
- Simplify container configuration for ECS Fargate compatibility

Resolves: Container startup failures, security audit findings, data privacy concerns

--- a/.gitignore
+++ b/.gitignore
@@ -196,6 +196,10 @@ docker-compose.override.yml
 # App Runner
 apprunner-service.json
 
+# Sample files (contains customer data)
+sample/
+data/
+
 # Deployment
 *.pem
 *.key
